  (Qt only).
* When manipulating packets with editcap using the -C <choplen> and/or
  -s <snaplen> options, it is now possible to also adjust the original frame
  length using the -L option.
* You can now pass the -C <choplen> option to editcap multiple times, which
  allows you to chop bytes from the beginning of a packet as well as at the end
  of a packet in a single step.

=== New Protocol Support

--sort-and-group--

ASTERIX
SEL RTAC (Real Time Automation Controller) EIA-232 Serial-Line Dissection
UDT

--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

--sort-and-group--

Netscaler 2.6
STANAG 4607

--sort-and-group--

== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the http://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Known Problems

Dumpcap might not quit if Wireshark or TShark crashes.
(ws-buglink:1419[])

The BER dissector might infinitely loop.
(ws-buglink:1516[])

Capture filters aren't applied when capturing from named pipes.
(ws-buglink:1814)

Filtering tshark captures with read filters (-R) no longer works.
(ws-buglink:2234[])

The 64-bit Windows installer does not support Kerberos decryption.
(https://wiki.wireshark.org/Development/Win64[Win64 development page])

Application crash when changing real-time option.